--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "expres": "^0.0.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22"
