--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.0.1",
+    "flowbite": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
