--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ node_modules
 .env.test.local
 .env.production.local
 
+.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# REACT_APP_BACKEND_HOST="http://localhost:5000"
