deployment fix - vercel integration

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "iNotebook - your notebook on the cloud ",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
